--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,15 @@ layout: compress
 
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
-  <head>
+  <head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-57QLR2RTT2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-57QLR2RTT2');
+</script>
     {% include head.html %}
     {% include head/custom.html %}
   </head>
